--- a/BeagleBone/index.html
+++ b/BeagleBone/index.html
@@ -187,7 +187,8 @@
         <table>
             <tr>
                 <td style="padding: 10px" width="70%">
-                    <img src="img/SeaFloor.jpg" style="width: 100%;">
+                    <!--<img src="img/SeaFloor.jpg" style="width: 100%;">-->
+                    <img src="http://192.168.7.2:8082/?action=stream" style="width:100%" />
                 </td>
 
                 <td style="padding: 10px" width="30%" align="left" valign="top">
