--- a/BeagleBone/index.html
+++ b/BeagleBone/index.html
@@ -261,7 +261,7 @@
                                 <p>Depth</p>
                             </td>
                             <td nowrap style="border: 1px solid white; border-collapse: collapse">
-                                <p id="">
+                                <p id="depth">
                                     0 Meters
                                 </p>
                             </td>
